# GeoGrapher

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: check.yml  lint.yml
docs/source/: advanced_cutting.rst  api.rst  basic_cutting.rst  cluster_rasters.rst  conf.py  connector.rst  conversion.rst  downloaders.rst  geographer.connector.Connector.rst  geographer.converters.rst  geographer.cutters.DSCutterEveryImgToGrid.rst  geographer.cutters.DSCutterImgsAroundEveryFeature.rst  geographer.cutters.DSCutterIterOverFeatures.rst  geographer.cutters.DSCutterIterOverImgs.rst  geographer.cutters.DSCutterIterOverRasters.rst  geographer.cutters.DSCutterIterOverVectors.rst  geographer.cutters.get_cutter_every_img_to_grid.rst  geographer.cutters.get_cutter_every_raster_to_grid.rst  geographer.cutters.get_cutter_imgs_around_every_feature.rst  geographer.cutters.get_cutter_rasters_around_every_vector.rst  geographer.cutters.rst  geographer.downloaders.rst  geographer.graph.rst  geographer.label_makers.rst  geographer.rst  geographer.testing.rst  geographer.utils.rst  glossary.rst  index.rst  installation.rst  label_makers.rst  modules.rst  rs_tools.converters.rst  rs_tools.cutters.DSCutterEveryImgToGrid.rst  rs_tools.cutters.DSCutterImgsAroundEveryFeature.rst  rs_tools.cutters.rst  rs_tools.testing.rst  tutorial.rst  tutorial_nb_basics.nblink  tutorial_nb_cut_label_cluster.nblink  (+1 more)
geographer/: __init__.py  add_drop_raster_imgs.py  add_drop_rasters_mixin.py  add_drop_vector_features_mixin.py  add_drop_vectors_mixin.py  class_diagram.md  connector.py  creator_from_source_dataset_base.py  documentation.md  errors.py  global_constants.py  img_bands_getter_mixin.py  img_polygon_associator_TODO  overview_and_definitions.md  raster_bands_getter_mixin.py  update_from_source_dataset_mixin.py
geographer/base_model_dict_conversion/: base_model_dict_conversion_functional.py  save_load_base_model_mixin.py
geographer/converters/: __init__.py  combine_remove_seg_classes.py  combine_remove_vector_classes.py  combine_remove_vector_feature_classes.py  label_type_soft_to_categorical.py  tif_to_npy.py
geographer/cutters/: __init__.py  cut_bboxes.py  cut_every_img_to_grid.py  cut_every_raster_to_grid.py  cut_imgs_around_every_feature.py  cut_iter_over_features.py  cut_iter_over_imgs.py  cut_iter_over_rasters.py  cut_iter_over_vectors.py  cut_rasters_around_every_vector.py  feature_filter_predicates.py  img_filter_predicates.py  img_selectors.py  raster_filter_predicates.py  raster_selectors.py  single_img_cutter_around_feature.py  single_img_cutter_base.py  single_img_cutter_bbox.py  single_img_cutter_grid.py  single_raster_cutter_around_vector.py  single_raster_cutter_base.py  single_raster_cutter_bbox.py  single_raster_cutter_grid.py  type_aliases.py  vector_filter_predicates.py
geographer/downloaders/: .env  __init__.py  base_download_processor.py  base_downloader_for_single_feature.py  base_downloader_for_single_vector.py  downloader_for_features.py  downloader_for_vectors.py  eodag_downloader_for_single_vector.py  jaxa_download_processor.py  jaxa_downloader_for_single_feature.py  jaxa_downloader_for_single_vector.py  sentinel2_download_processor.py  sentinel2_downloader_for_single_feature.py  sentinel2_downloader_for_single_vector.py  sentinel2_safe_unpacking.py
geographer/graph/: __init__.py  bipartite_graph.py  bipartite_graph_class.py  bipartite_graph_mixin.py  type_aliases.py
geographer/label_makers/: __init__.py  label_maker_base.py  label_type_conversion_utils.py  seg_label_maker_base.py  seg_label_maker_categorical.py  seg_label_maker_soft_categorical.py
geographer/testing/: __init__.py  graph_df_compatibility.py  mock_download.py
geographer/utils/: __init__.py  cluster_rasters.py  connector_utils.py  merge_datasets.py  raster_imgs_from_tif_dir.py  rasters_from_tif_dir.py  utils.py
notebooks/: .gitignore  blogpost.ipynb  stadiums.geojson  stadiums_binary.geojson  tutorial_nb_basics.ipynb  tutorial_nb_cut_label_cluster.ipynb
rs_tools/: __init__.py  add_drop_imgs_polygons_mixin.py  add_drop_raster_imgs.py  add_drop_vector_features_mixin.py  class_diagram.md  connector.py  convert_tif_to_npy_mixin.py  create_new_dataset_by_combining_and_or_removing_seg_classes_mixin.py  create_new_dataset_by_cutting_every_img_to_grid_of_imgs_mixin.py  create_new_dataset_by_cuttings_imgs_around_every_polygon_mixin.py  create_new_dataset_with_label_type_mixin.py  creator_from_source_dataset_base.py  documentation.md  download_imgs_mixin.py  errors.py  global_constants.py  img_bands_getter_mixin.py  img_polygon_associator.py  img_polygon_associator_TODO  img_polygon_associator_base.py  img_polygon_associator_class.py  labels_mixin.py  overview_and_definitions.md  planned_changes.md  update_from_source_dataset_mixin.py
rs_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rs_tools/base_model_dict_conversion/: save_base_model_mixin.py  save_load_base_model_mixin.py
rs_tools/convert/: __init__.py  combine_remove_seg_classes.py  combine_remove_seg_classes_mixin.py  label_type_soft_to_categorical.py  soft_to_categorical_mixin.py  tif_to_npy.py  tif_to_npy_mixin.py
rs_tools/convert_dataset/: __init__.py  combine_remove_seg_classes.py  combine_remove_seg_classes_OLD.py  combine_remove_seg_classes_mixin.py  convert_or_update_dataset_from_tif_to_npy.py  soft_to_categorical.py  soft_to_categorical_OLD.py  soft_to_categorical_REFACTOR.py  tif_to_npy.py  (+3 more)
tests/: .gitignore  bipartite_graph_test.py  cluster_rasters_test.py  combine_remove_seg_classes_test.py  conftest.py  connector_test.py  cut_dataset_iter_over_polygons_test.py  cut_every_img_to_grid_test.py  cut_every_raster_to_grid_test.py  cut_imgs_around_every_feature_test.py  cut_rasters_around_every_vector_test.py  download_jaxa_test_manually.py  download_s2_test_manually.py  geographer_download_test.kml  mock_download_test.py  save_load_base_model_test.py  seg_label_makers_test.py  test_eodag_s2_download.py  test_jaxa_download.py  utils.py
(+131 files in other folders)
