[project]
name = "geographer"
version = "0.1"
description = "Build object-centric remote sensing computer vision datasets"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rustam Antia", email = "rustam.antia@gmail.com"}
]
keywords = ["remote sensing", "computer vision", "satellite imagery", "GIS", "machine learning"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.9"
dependencies = [
    "eodag",
    "eval_type_backport",
    "fiona",
    "geojson",
    "geopandas",
    "GitPython",
    "ipywidgets",
    "matplotlib",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "pydantic >= 2.0",
    "pyproj",
    "rasterio",
    "requests",
    "rioxarray",
    "rtree",
    "scipy",
    "sentinelsat",
    "Shapely",
    "tqdm",
    "urllib3"
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "docformatter",
    "flake8",
    "flake8-black",
    "flake8-docstrings",
    "flake8-isort",
    "ipykernel",
    "isort",
    "pytest"
]
docs = [
    "furo",
    "autodoc_pydantic",
    "docutils",
    "pandoc",
    "Sphinx",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "nbsphinx-link"
]

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["geographer*"], exclude = ["docs*", "tests*", "notebooks*"]}}

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E266"]  # allow multiple leading '#' for block comments
per-file-ignores = {"__init__.py" = ["F401", "D104"]}

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
