[metadata]
name = geographer
version = 0.1
author = Rustam Antia
author_email = rustam.antia@gmail.com
description = build objec-centric remote sensing computer vision datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = remote sensing, computer vision, satellite imagery, GIS, machine learning
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    geojson
    geopandas
    GitPython
    networkx
    numpy
    pandas
    pydantic
    pygeos
    pyproj
    rasterio
    requests
    rioxarray
    scipy
    sentinelsat
    Shapely
    tqdm
    urllib3

[options.extras_require]
dev = 
    black
    docformatter
    flake8
    isort
    mypy
    pylint
    pytest
docs = 
    alabaster
    docutils
    Sphinx
    sphinx-autodoc-typehints

[options.package_data]
geographer = data/schema.json, *.txt
* = README.md
