[metadata]
name = geographer
version = 0.1
author = Rustam Antia
author_email = rustam.antia@gmail.com
description = Build objec-centric remote sensing computer vision datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = remote sensing, computer vision, satellite imagery, GIS, machine learning
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    fiona
    geojson
    geopandas
    GitPython
    matplotlib
    networkx
    numpy
    packaging
    pandas
    pydantic
    pygeos
    pyproj
    rasterio
    requests
    rioxarray
    rtree
    scipy
    sentinelsat
    Shapely
    tqdm
    urllib3

[options.extras_require]
dev = 
    black
    docformatter
    flake8
    flake8-black
    flake8-docstrings
    flake8-isort
    isort
    mypy
    pytest
docs = 
    alabaster
    docutils
    pandoc
    Sphinx
    sphinx-autodoc-typehints
    nbsphinx
    nbsphinx-link

[options.package_data]
geographer = data/schema.json, *.txt
* = README.md

[flake8]
max-line-length = 88
extend-ignore = E266  # allow multiple leading '#' for block comment
per-file-ignores = __init__.py:F401,D104

[mypy]

[mypy-geopandas.*]
ignore_missing_imports = True

[mypy-rasterio.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-affine.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-sentinelsat.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-fiona.*]
ignore_missing_imports = True
